# pyquil-for-azure-quantum

./: 404.html  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: checks.yml  docs.yml  release.yml
api_reference/: index.html
pr-preview/pr-22/: CONTRIBUTING.md  Makefile  pyproject.toml  sitemap.xml
pr-preview/pr-22/api_reference/: index.html
pr-preview/pr-22/docs/: api_reference.md
pr-preview/pr-22/search/: search_index.json
pr-preview/pr-22/site/: 404.html
pr-preview/pr-22/test/: conftest.py  test_e2e_qcs_operations.py
pr-preview/pr-23/: sitemap.xml
pyquil_azure/: __init__.py
pyquil_azure_quantum/: __init__.py
pyquil_for_azure_quantum/: __init__.py
search/: search_index.json
site/: index.html  objects.inv
test/: __init__.py  conftest.py  test_e2e_no_qcs.py  test_e2e_qcs_operations.py
test/e2e_no_qcs/: __init__.py  test_e2e.py
test/e2e_with_qcs/: __init__.py  test_e2e.py
