[tool.poetry]
name = "pyquil-for-azure-quantum"
version = "0.1.0"
description = "Run Quil programs on Microsoft Azure Quantum using pyQuil"
authors = ["Dylan Anthony <danthony@rigetti.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rigetti/pyquil-for-azure-quantum"
documentation = "https://rigetti.github.io/pyquil-for-azure-quantum/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pyquil = "^4.14.3"
azure-quantum = ">=0.27,<1.0"
lazy-object-proxy = "^1.7.1"
wrapt = "^1.14.0"
numpy = "^1.21.6"
scipy = "^1.6.1"
aiohttp = ">=3.10.10"
multidict = ">=6.0.5"
qcs-sdk-python = "0.20.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
mypy = "^1.12"
isort = "^5.10.1"
black = "^22.3.0"
pylint = "^3.3.3"
mkdocstrings = { version = "^0.19.0", extras = ["python-legacy"] }
mkdocs = "^1.3.0"
mkdocs-include-markdown-plugin = "^3.5.2"
mkdocs-material = "^8.3.8"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "azure.quantum.*",
    "lazy_object_proxy",
    "numpy",
    "pytest.*",
    "pyquil.*",
    "wrapt",
]

[tool.pylint.messages_control]
disable = [
    "import-error",
    "line-too-long",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
